[package]
name = "kite_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10.8"
kiteconnect = "0.2.9"
